@@ -2163,7 +2163,7 @@ declare global {
         readonly downtime: number;
 
         /**
-         * The currently set chain lift speed in miles per hour.
+         * The currently set chain lift speed in miles per hour. Use `context.formatString()` to convert speed values to a localised value/unit string. Ex: `formatString('{VELOCITY}', ride.liftHillSpeed)`.
          */
         liftHillSpeed: number;
 
@@ -2181,6 +2181,61 @@ declare global {
          * The satisfaction rating of the ride from 0 to 100.
          */
         readonly satisfaction: number;
+
+        /**
+         * The max speed in miles per hour.
+         */
+        readonly maxSpeed: number;
+
+        /**
+         * The average speed in miles per hour.
+         */
+        readonly averageSpeed: number;
+
+        /**
+         * The ride time in seconds.
+         */
+        readonly rideTime: number;
+
+        /**
+         * Total length of the ride in meters. Use `context.formatString()` to convert into localised value/unit string. Ex: `formatString('{LENGTH}', ride.rideLength)`.
+         */
+        readonly rideLength: number;
+
+        /**
+         * The max positive vertical Gs.
+         */
+        readonly maxPositiveVerticalGs: number;
+
+        /**
+         * The max negative vertical Gs.
+         */
+        readonly maxNegativeVerticalGs: number;
+
+        /**
+         * The max lateral Gs.
+         */
+        readonly maxLateralGs: number;
+
+        /**
+         * The total airtime in seconds.
+         */
+        readonly totalAirTime: number;
+
+        /**
+         * The number of drops.
+         */
+        readonly numDrops: number;
+
+        /**
+         * The number of lift hills.
+         */
+        readonly numLiftHills: number;
+
+        /**
+         * Highest drop height in height units. Use `context.formatString()` to convert into metres/feet. Ex: `formatString('{HEIGHT}', ride.highestDropHeight)`.
+         */
+        readonly highestDropHeight: number;
     }
 
     type RideClassification = "ride" | "stall" | "facility";
